--- a/TugasOOP/TugasOOP/TugasOOP.csproj
+++ b/TugasOOP/TugasOOP/TugasOOP.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lingkaran.cs" />
+    <Compile Include="Persegi.cs" />
+    <Compile Include="PersegiPanjang.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Segitiga.cs" />
+    <Compile Include="Trapesium.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
